@@ -23,9 +23,9 @@ class CppFileExtractorTest {
         List<Element> files = extractFileFromFile(filePath);
 
         Assertions.assertEquals(1, files.size());
-        Assertions.assertEquals("main", files.get(0).getName());
-        Assertions.assertEquals("src/test/resources/cpp/interface/edu/src/main.cpp", files.get(0).getPath());
-        Assertions.assertNull(files.get(0).getParentIdentifier());
+        Assertions.assertEquals("main", files.getFirst().getName());
+        Assertions.assertEquals("src/test/resources/cpp/interface/edu/src/main.cpp", files.getFirst().getPath());
+        Assertions.assertNull(files.getFirst().getParentIdentifier());
     }
 
     @Test
@@ -34,9 +34,9 @@ class CppFileExtractorTest {
         List<Element> files = extractFileFromFile(filePath);
 
         Assertions.assertEquals(1, files.size());
-        Assertions.assertEquals("Entities", files.get(0).getName());
-        Assertions.assertEquals("src/test/resources/cpp/interface/edu/src/Entities.cpp", files.get(0).getPath());
-        Assertions.assertNull(files.get(0).getParentIdentifier());
+        Assertions.assertEquals("Entities", files.getFirst().getName());
+        Assertions.assertEquals("src/test/resources/cpp/interface/edu/src/Entities.cpp", files.getFirst().getPath());
+        Assertions.assertNull(files.getFirst().getParentIdentifier());
     }
 
     @Test
@@ -45,9 +45,9 @@ class CppFileExtractorTest {
         List<Element> files = extractFileFromFile(filePath);
 
         Assertions.assertEquals(1, files.size());
-        Assertions.assertEquals("Entities", files.get(0).getName());
-        Assertions.assertEquals("src/test/resources/cpp/interface/edu/include/Entities.h", files.get(0).getPath());
-        Assertions.assertNull(files.get(0).getParentIdentifier());
+        Assertions.assertEquals("Entities", files.getFirst().getName());
+        Assertions.assertEquals("src/test/resources/cpp/interface/edu/include/Entities.h", files.getFirst().getPath());
+        Assertions.assertNull(files.getFirst().getParentIdentifier());
     }
 
     private List<Element> extractFileFromFile(String filePath) throws IOException {
